--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Github Repository</string>
+    <string name="users">Users</string>
+    <string name="user">User</string>
+
+    <string name="loading">Loading</string>
+    <string name="an_error_has_occurred">Oops! something went wrong</string>
+    <string name="try_again">Try Again</string>
+    <string name="empty">No results found</string>
+
 </resources>
