--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Github Repository</string>
+    <string name="app_name">Github Repository Search</string>
     <string name="users">Users</string>
     <string name="user">User</string>
 
@@ -8,5 +8,9 @@
     <string name="try_again">Try Again</string>
     <string name="empty">No results found</string>
     <string name="search_hint">Search for a user</string>
+    <string name="repositories">repositories</string>
+    <string name="auth_header_value">Bearer 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</string>
+    <string name="graph_api_endpoint">https://api.github.com/graphql</string>
+
 
 </resources>
