--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="repositories">repositories</string>
     <string name="auth_header_value">Bearer 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</string>
     <string name="graph_api_endpoint">https://api.github.com/graphql</string>
+    <string name="empty_users">Search to find users…</string>
 
 
 </resources>
